# punypage

./: .cta.json  .env.example  .env.local.example  .gitignore  CHAT_SETUP.md  CLAUDE.md  README.md  index.html  package.json
prompts/: claude-agent-sdk.md  supabase-setup.md  temp-login.md
scripts/: get-port.ts
server/: .env.example  README.md  pyproject.toml  tsconfig.json
server/app/: config.py  constants.py  main.py
server/app/agents/: chat_agent.py
server/app/core/: active_clients.py  dependencies.py  middleware.py  rag_ingestion.py  scheduler.py  session_manager.py
server/app/core/auth/: __init__.py  dependencies.py
server/app/routes/: chat.py  health.py  rag.py
server/app/utils/: markdown_parser.py  sse.py  tiptap_parser.py
server/mcp_servers/: __init__.py
server/mcp_servers/punypage_internal/: __init__.py  __main__.py  server.py
server/mcp_servers/punypage_internal/db/: __init__.py  supabase.py
server/mcp_servers/punypage_internal/tools/: __init__.py  documents.py  schemas.py
server/src/: index.ts
server/src/agents/: chat.ts
server/src/routes/: chat.ts  health.ts
src/: main.tsx  routeTree.gen.ts  styles.css
src/components/: AppLayout.tsx  AppSidebar.tsx  Header.tsx  LoadingScreen.tsx
src/lib/: ragApi.ts  supabase.ts
src/routes/: __root.tsx  index.tsx  reset-password.tsx  sign-in.tsx  sign-up.tsx  test-supabase.tsx  update-password.tsx
src/types/: database.types.ts
supabase/: README.md  config.toml  seed.sql
supabase/migrations/: 20250114000000_create_chat_tables.sql  20250117000000_add_performance_indexes.sql  (+11 more)
(+61 files in other folders)
